Migrates commons-lang to native Java Platform functionality